crates/vespera_macro/src/parser/snapshots/vespera_macro__parser__request_body__tests__parse_request_body_cases.snap
---
source: crates/vespera_macro/src/parser/request_body.rs
expression: body
---
Some(
    RequestBody {
        description: None,
        required: Some(
            true,
        ),
        content: {
            "application/json": MediaType {
                schema: Some(
                    Inline(
                        Schema {
                            ref_path: None,
                            schema_type: Some(
                                Object,
                            ),
                            format: None,
                            title: None,
                            description: None,
                            default: None,
                            example: None,
                            examples: None,
                            minimum: None,
                            maximum: None,
                            exclusive_minimum: None,
                            exclusive_maximum: None,
                            multiple_of: None,
                            min_length: None,
                            max_length: None,
                            pattern: None,
                            items: None,
                            prefix_items: None,
                            min_items: None,
                            max_items: None,
                            unique_items: None,
                            properties: None,
                            required: None,
                            additional_properties: None,
                            min_properties: None,
                            max_properties: None,
                            enum: None,
                            all_of: None,
                            any_of: None,
                            one_of: None,
                            not: None,
                            nullable: None,
                            read_only: None,
                            write_only: None,
                            external_docs: None,
                            defs: None,
                            dynamic_anchor: None,
                            dynamic_ref: None,
                        },
                    ),
                ),
                example: None,
                examples: None,
            },
        },
    },
)
